--- a/esp32/maidesite-desk.yaml
+++ b/esp32/maidesite-desk.yaml
@@ -1,183 +1,268 @@
-class DeskControl : public Component, public UARTDevice
-{
-public:
-    DeskControl(UARTComponent *parent) : UARTDevice(parent) {}
+substitutions:
+  name: "maidesite-desk"
+  friendly_name: Maidesite Desk
+  min_height: "620"
+  max_height: "1263"
 
-    enum State
-    {
-        WAIT_FOR_BYTE_1 = 0,
-        WAIT_FOR_BYTE_2,
-        RECEIVE_COMMAND,
-        RECEIVE_SIZE,
-        RECEIVE_DATA,
-        VERIFY_CHECKSUM,
-        PROCESS_COMMAND
-    };
+esphome:
+  name: ${name}
+  friendly_name: ${friendly_name}
+  includes:
+    - desk-control.h
+  on_boot:
+    priority: 800
+    then:
+      - uart.write: 
+          [0xf1, 0xf1, 0x07, 0x00, 0x07, 0x7e, 0xf1, 0xf1, 0x08, 0x00, 0x08, 0x7e,
+          0xf1, 0xf1, 0x09, 0x00, 0x09, 0x7e, 0xf1, 0xf1, 0x0c, 0x00, 0x0c, 0x7e,
+          0xf1, 0xf1, 0x0e, 0x00, 0x0e, 0x7e]
 
-    int state = WAIT_FOR_BYTE_1;
-    int value;
-    int command;
-    int chksum = 0;
-    int bufsize = 0;
-    int bufread = 0;
-    float valueF;
-    uint8_t buffer[10];
+esp32:
+  board: esp32dev
+  framework:
+    type: arduino
 
-    void loop() override
-    {
-        while (available())
-        {
-            uint8_t c;
-            this->read_byte(&c);
+logger:
+  level: DEBUG
 
-            switch (state)
-            {
-            case WAIT_FOR_BYTE_1:
-                handleWaitForByte1(c);
-                break;
-            case WAIT_FOR_BYTE_2:
-                handleWaitForByte2(c);
-                break;
-            case RECEIVE_COMMAND:
-                handleReceiveCommand(c);
-                break;
-            case RECEIVE_SIZE:
-                handleReceiveSize(c);
-                break;
-            case RECEIVE_DATA:
-                handleReceiveData(c);
-                break;
-            case VERIFY_CHECKSUM:
-                handleVerifyChecksum(c);
-                break;
-            case PROCESS_COMMAND:
-                handleProcessCommand(c);
-                break;
-            default:
-                ESP_LOGD("custom", "🔴 Unexpected state: %i", state);
-                state = WAIT_FOR_BYTE_1;
-                break;
-            }
-        }
-    }
+api:
+  encryption:
+    key: !secret api_encryption_key
 
-private:
+ota:
+  platform: esphome
+  password: !secret ota_password
 
-    void handleWaitForByte1(uint8_t c)
-    {
-        if (c == 0xf2)
-        {
-            state = WAIT_FOR_BYTE_2;
-        }
-    }
+improv_serial:
 
-    void handleWaitForByte2(uint8_t c)
-    {
-        if (c == 0xf2)
-        {
-            state = RECEIVE_COMMAND;
-            chksum = 0;
-        }
-        else
-        {
-            state = WAIT_FOR_BYTE_1;
-        }
-    }
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
-    void handleReceiveCommand(uint8_t c)
-    {
-        command = c;
-        state = RECEIVE_SIZE;
-        chksum += command;
-    }
+uart:
+  - id: maidesite_uart
+    tx_pin: 26
+    rx_pin: 27
+    baud_rate: 9600
+    debug:
+      direction: BOTH
+      dummy_receiver: false
+      after:
+        delimiter: "\n"
+      sequence:
+        - lambda: UARTDebug::log_string(direction, bytes);
 
-    void handleReceiveSize(uint8_t c)
-    {
-        bufsize = c;
-        bufread = 0;
-        chksum += bufsize;
-        state = RECEIVE_DATA;
-    }
+globals:
+  - id: desk_switch_state
+    type: bool
+    restore_value: no
+    initial_value: "false"
+  - id: last_height
+    type: float
+    initial_value: "0.0"
+  - id: height_timer
+    type: int
+    initial_value: "0"
+  - id: sitting_threshold
+    type: float
+    initial_value: "100.0"
+  - id: standing_threshold
+    type: float
+    initial_value: "1200.0"
 
-    void handleReceiveData(uint8_t c)
-    {
-        if (bufread < bufsize)
-        {
-            buffer[bufread] = c;
-            chksum += c;
-            bufread++;
-        }
-        if (bufread == bufsize)
-        {
-            state = VERIFY_CHECKSUM;
-        }
-    }
+custom_component:
+  - lambda: |-
+      return {new DeskControl(id(maidesite_uart))};
 
-    void handleVerifyChecksum(uint8_t c)
-    {
-        chksum = (chksum & 0xff); // Limit to 8 bits
-        if (chksum == c)
-        {
-            state = PROCESS_COMMAND;
-        }
-        else
-        {
-            state = WAIT_FOR_BYTE_1; // Checksum failure, reset state
-        }
-    }
+sensor:
+  - platform: template
+    name: "Time at Current Height"
+    id: time_at_current_height
+    unit_of_measurement: "s"
+    icon: "mdi:timer"
+    accuracy_decimals: 0
+    update_interval: 0.5s
+    lambda: |-
+      return id(height_timer);
+  - platform: template
+    name: "Current Height"
+    id: desk_height
+    unit_of_measurement: "cm"
+    accuracy_decimals: 1
+    icon: "mdi:arrow-up-down"
+    update_interval: 0.5s
+    lambda: |-
+      return id(height_slider).state / 10.0;
+  - platform: template
+    name: "Sitting Position"
+    id: "sensor_m1"
+    icon: "mdi:seat-recline-normal"
+    filters:
+      - lambda: !lambda |-
+          if (x < 1) {
+            return {};
+          }
+          return x / 10;
+  - platform: template
+    name: "Standing Position"
+    id: "sensor_m2"
+    icon: "mdi:human-male"
+    filters:
+      - lambda: !lambda |-
+          if (x < 1) {
+            return {};
+          }
+          return x / 10;
+  - platform: template
+    name: "Custom Position 1"
+    id: "sensor_m3"
+    icon: "mdi:human-male-height-variant"
+    filters:
+      - lambda: !lambda |-
+          if (x < 1) {
+            return {};
+          }
+          return x / 10;
+  - platform: template
+    name: "Custom Position 2"
+    id: "sensor_m4"
+    icon: "mdi:human-male-height-variant"
+    filters:
+      - lambda: !lambda |-
+          if (x < 1) {
+            return {};
+          }
+          return x / 10;
 
-    void handleProcessCommand(uint8_t c)
-    {
-        if (c == 0x7e)
-        {
-            processCommand();
-            ESP_LOGD("custom", "🔵 Command processed: %i", command);
-        } else {
-            ESP_LOGD("custom", "🔴 Unexpected byte: %02x", c);
-        }
-        state = WAIT_FOR_BYTE_1; // Reset to initial state after processing
-    }
+text_sensor:
+  - platform: template
+    name: "Height Status"
+    id: height_status
+    icon: "mdi:human-male-female"
+    update_interval: 10s
+    lambda: |-
+      float current_height = id(height_slider).state / 10.0;
+      if (current_height >= 70.0 && current_height <= 80.0) {
+        return std::string("Sitting");
+      } else if (current_height >= 115.0 && current_height <= 125.0) {
+        return std::string("Standing");
+      } else {
+        return std::string("Other");
+      }
 
-    void processCommand()
-    {
-        switch (command)
-        {
-            case 1:
-                valueF = (buffer[0] * 256) + buffer[1];
-                id(height_slider).publish_state(valueF);
-                break;
-            case 0x25:
-            case 0x26:
-            case 0x27:
-            case 0x28:
-                valueF = (buffer[0] * 256) + buffer[1];
-                publishSensorState(command);
-                break;
-            default:
-                ESP_LOGD("custom", "🔴 Unexpected command: %i", command);
-                break;
-        }
-    }
+switch:
+  - platform: template
+    name: "Desk Lock"
+    id: lock_mode
+    lambda: return id(desk_switch_state);
+    turn_on_action:
+      - logger.log: "🟢 Desk is now unlocked and operational."
+      - globals.set:
+          id: desk_switch_state
+          value: "true"
+    turn_off_action:
+      - logger.log: "🔴 Desk is now locked and non-operational."
+      - globals.set:
+          id: desk_switch_state
+          value: "false"
 
-    void publishSensorState(int command)
-    {
-        switch (command)
-        {
-            case 0x25:
-                id(sensor_m1).publish_state(valueF);
-                break;
-            case 0x26:
-                id(sensor_m2).publish_state(valueF);
-                break;
-            case 0x27:
-                id(sensor_m3).publish_state(valueF);
-                break;
-            case 0x28:
-                id(sensor_m4).publish_state(valueF);
-                break;
-            default:
-                ESP_LOGD("custom", "🔴 Unexpected command: %i", command);
-                break;
-        }
-    }
-};
+button:
+  - platform: template
+    name: Up
+    id: button_up
+    icon: "mdi:arrow-up-bold"
+    on_press:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - logger.log: "⚡ UP desk"
+          - uart.write: [0xf1, 0xf1, 0x01, 0x00, 0x01, 0x7e]
+  - platform: template
+    name: Down
+    id: button_down
+    icon: "mdi:arrow-down-bold"
+    on_press:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - logger.log: "⚡ DOWN desk"
+          - uart.write: [0xf1, 0xf1, 0x02, 0x00, 0x02, 0x7e]
+  - platform: template
+    name: Sitting position
+    id: button_sit
+    icon: "mdi:seat-recline-normal"
+    on_press:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - logger.log: "⚡ Sitting position"
+          - uart.write: [0xf1, 0xf1, 0x05, 0x00, 0x05, 0x7e]
+  - platform: template
+    name: Stand position
+    id: button_stand
+    icon: "mdi:human-male"
+    on_press:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - logger.log: "⚡ Stand position"
+          - uart.write: [0xf1, 0xf1, 0x06, 0x00, 0x06, 0x7e]
+  - platform: template
+    name: Vibrate
+    id: button_vibrate
+    disabled_by_default: True
+    icon: mdi:test-tube
+    on_press:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - logger.log: "⚡ Vibrate desk button pressed!"
+          - uart.write: [0xf1, 0xf1, 0x10, 0x00, 0x10, 0x7e]
+  - platform: template
+    name: Test
+    id: button_test
+    disabled_by_default: True
+    icon: "mdi:test-tube"
+    on_press:
+      then:
+        - logger.log: "🧪 Test desk"
+        - uart.write: 
+            [0xf1, 0xf1, 0x07, 0x00, 0x07, 0x7e, 0xf1, 0xf1, 0x08, 0x00, 0x08, 0x7e,
+            0xf1, 0xf1, 0x09, 0x00, 0x09, 0x7e, 0xf1, 0xf1, 0x0c, 0x00, 0x0c, 0x7e,
+            0xf1, 0xf1, 0x0e, 0x00, 0x0e, 0x7e]
+
+number:
+  - platform: template
+    name: "Desk Height Control"
+    id: height_slider
+    step: 1
+    min_value: ${min_height}
+    max_value: ${max_height}
+    mode: BOX
+    set_action:
+      if:
+        condition:
+          switch.is_on: lock_mode
+        then:
+          - uart.write: !lambda |-
+              int a = (int(x) & 0xff);
+              int b = ((int(x) >> 8) & 0xff);
+              int c = (a + b + 0x80 + 0x02) & 0xff;
+              return {0xf1, 0xf1, 0x80, 2, b, a, c, 0x7e, 0xf1, 0xf1, 0x1b, 0x00, 0x1b, 0x7e};
+
+interval:
+  - interval: 1s
+    then:
+      - lambda: |-
+          float current_height = id(height_slider).state;
+          if (current_height == id(last_height)) {
+            id(height_timer)++;
+          } else {
+            id(height_timer) = 0;
+            id(last_height) = current_height;
+          }
