--- a/esp32/maidesite-desk.yaml
+++ b/esp32/maidesite-desk.yaml
@@ -250,9 +250,9 @@ number:
           switch.is_on: lock_mode
         then:
           - uart.write: !lambda |-
-              int a = (int(x) & 0xff);
-              int b = ((int(x) >> 8) & 0xff);
-              int c = (a + b + 0x80 + 0x02) & 0xff;
+              uint8_t a = static_cast<uint8_t>(int(x) & 0xff);
+              uint8_t b = static_cast<uint8_t>((int(x) >> 8) & 0xff);
+              uint8_t c = static_cast<uint8_t>((a + b + 0x80 + 0x02) & 0xff);
               return {0xf1, 0xf1, 0x80, 2, b, a, c, 0x7e, 0xf1, 0xf1, 0x1b, 0x00, 0x1b, 0x7e};
 
 interval:
